internal/fixtures/architecture/negative/environment-config-name/packages/domain/src/config.ts
export const forbidden = process.env.DOMAIN_MODE;
